--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     <label for="workDate">Select Date: </label>
     <input type="date" id="workDate">
     <button id="saveBtn">Save</button>
+  </div>
+
+  <div>
+    <label for="exportFrom">From: </label>
+    <input type="date" id="exportFrom">
+    <label for="exportTo">To: </label>
+    <input type="date" id="exportTo">
     <button onclick="exportCSV()">Export CSV</button>
   </div>
 
