--- a/index.html
+++ b/index.html
@@ -1,50 +1,431 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Employee Working Hours</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Employee Attendance App</title>
+<style>
+body { font-family: Arial, sans-serif; padding: 20px; }
+table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+th, td { border: 1px solid #333; padding: 8px; text-align: left; }
+th { background-color: #f04e23; color: white; }
+.team-block { border:1px solid #333; padding:10px; margin-bottom:10px; background:#f9f9f9;}
+.bulk-section { margin-top:5px; }
+#sidebar { position:fixed; left:-320px; top:0; width:320px; height:100%; background:#f0f0f0; overflow:auto; transition:0.3s; padding:10px; z-index:100; }
+#sidebar.open { left:0; }
+#hamburgerBtn { position:fixed; top:10px; left:10px; z-index:101; padding:10px; background:#f04e23; color:white; border:none; cursor:pointer; font-size:18px; }
+button { cursor:pointer; }
+</style>
 </head>
 <body>
-<header>
-  <button id="hamburgerBtn">☰ Teams</button>
-  <h2>Employee Working Hours</h2>
-  <div id="g_id_onload"
-       data-client_id="673912261065-pg97ssu1q4ra3rhldpfhkcodr7a488h7.apps.googleusercontent.com"
-       data-callback="onGoogleLogin"></div>
-  <div class="g_id_signin" data-type="standard"></div>
-</header>
 
-<aside id="sidebar">
+<h2>Employee Attendance App</h2>
+<input type="date" id="workDate">
+<button id="saveBtn">Save</button>
+<button id="shareBtn">Copy Share Link</button>
+<button onclick="exportCSV()">Export CSV</button>
+
+<button id="hamburgerBtn">☰ Employees</button>
+<div id="sidebar">
   <div id="employeeMenu"></div>
-</aside>
+</div>
 
-<main>
-  <div>
-    <label for="workDate">Select Date: </label>
-    <input type="date" id="workDate">
-    <button id="saveBtn">Save</button>
-    <button id="shareBtn">Get Shareable Link</button>
-  </div>
+<table id="employeeTable"></table>
 
-  <div>
-    <label for="exportFrom">From: </label>
-    <input type="date" id="exportFrom">
-    <label for="exportTo">To: </label>
-    <input type="date" id="exportTo">
-    <button onclick="exportCSV()">Export CSV</button>
-  </div>
+<h3>Saved Dates</h3>
+<ul id="savedDatesList"></ul>
 
-  <table id="employeeTable"></table>
+<script>
+// ==========================
+// Global Data
+// ==========================
+let teams = JSON.parse(localStorage.getItem("teams")) || [
+  { name: "Team 1", employees: [] },
+  { name: "Team 2", employees: [] },
+  { name: "Team 3", employees: [] },
+  { name: "Team 4", employees: [] }
+];
 
-  <div id="savedDatesContainer">
-    <h4>Saved Dates:</h4>
-    <ul id="savedDatesList"></ul>
-  </div>
-</main>
+let allData = JSON.parse(localStorage.getItem("allData")) || {}; 
+let selectedDate = new Date().toISOString().split("T")[0];
 
-<script src="script.js"></script>
+// UAE Public Holidays 2025
+const publicHolidays = [
+  "2025-01-01","2025-03-30","2025-03-31","2025-04-01","2025-04-02",
+  "2025-06-05","2025-06-06","2025-06-07","2025-06-08",
+  "2025-06-27","2025-09-05","2025-12-02","2025-12-03",
+  "2025-12-30","2025-12-31"
+];
+
+function saveTeams(){ localStorage.setItem("teams", JSON.stringify(teams)); }
+function saveAllData(){ localStorage.setItem("allData", JSON.stringify(allData)); }
+
+// ==========================
+// Date Picker
+// ==========================
+const dateInput = document.getElementById("workDate");
+dateInput.value = selectedDate;
+dateInput.addEventListener("change", () => {
+  selectedDate = dateInput.value;
+  buildEmployeeTable();
+});
+
+// ==========================
+// Hamburger Toggle
+// ==========================
+const sidebar = document.getElementById("sidebar");
+const hamburgerBtn = document.getElementById("hamburgerBtn");
+let draggedEmpId = null;
+
+hamburgerBtn.addEventListener("click", e => {
+  e.stopPropagation();
+  sidebar.classList.toggle("open");
+});
+document.addEventListener("click", e => {
+  if(!sidebar.contains(e.target) && !hamburgerBtn.contains(e.target)) {
+    sidebar.classList.remove("open");
+  }
+});
+
+// ==========================
+// Google Login
+// ==========================
+let currentUser = null;
+function onGoogleLogin(response){
+  const credential = response.credential;
+  currentUser = parseJwt(credential);
+  alert("Welcome "+currentUser.email);
+}
+function parseJwt(token){
+  const base64Url = token.split('.')[1];
+  const base64 = base64Url.replace(/-/g,'+').replace(/_/g,'/');
+  return JSON.parse(window.atob(base64));
+}
+
+// ==========================
+// Shareable Link
+// ==========================
+document.getElementById("shareBtn").addEventListener("click",()=>{
+  const url = `${window.location.origin}/view.html`;
+  navigator.clipboard.writeText(url);
+  alert("Shareable link copied: "+url);
+});
+
+// ==========================
+// Push to Google Sheet
+// ==========================
+async function pushToGoogleSheet(date, data){
+  if(!data) return;
+
+  const rows = [];
+  const teamMap={};
+  teams.forEach(t=>t.employees.forEach(e=>{teamMap[e.id]=t.name;}));
+
+  Object.keys(data).forEach(empId=>{
+    const emp = teams.flatMap(t=>t.employees).find(e=>e.id==empId);
+    if(!emp) return;
+    const empData = data[empId];
+
+    const inTime = empData.in||"";
+    const outTime = empData.out||"";
+    const siteName = empData.site||emp.site;
+    let totalHours="", overtimeHours="";
+
+    if(inTime && outTime){
+      const [inH,inM]=inTime.split(":").map(Number);
+      const [outH,outM]=outTime.split(":").map(Number);
+      let diff = (outH*60+outM-(inH*60+inM))/60;
+      if(diff<0) diff+=24;
+      totalHours=diff.toFixed(2);
+      const d = new Date(date);
+      if(d.getDay()===0||publicHolidays.includes(date)) overtimeHours=diff.toFixed(2);
+      else overtimeHours=diff>9?(diff-9).toFixed(2):"0";
+    }
+
+    rows.push({
+      "Date":date,
+      "Employee Name":emp.name,
+      "Site Name":siteName,
+      "Team":teamMap[empId],
+      "Site In":inTime,
+      "Site Out":outTime,
+      "Total Hours":totalHours,
+      "Overtime Hours":overtimeHours
+    });
+  });
+
+  try{
+    await fetch("https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbxG_etzGXWEg9uK9TFciAKLp7_eJaWY_P-dO3LtNWNrvzRch7xuJ0xn3Xm7PFTUXlQt/exec",{
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body: JSON.stringify(rows)
+    });
+  }catch(err){ console.error("Failed to push to Google Sheet:",err);}
+}
+
+// ==========================
+// Save Button
+// ==========================
+document.getElementById("saveBtn").addEventListener("click",async()=>{
+  saveAllData();
+  updateSavedDatesList();
+
+  if(currentUser){
+    const dataToSend=allData[selectedDate];
+    await pushToGoogleSheet(selectedDate,dataToSend);
+    alert("Data saved and synced to Google Sheet for "+selectedDate);
+  }else{
+    alert("Please login with Google first!");
+  }
+});
+
+// ==========================
+// Hamburger Menu & Employee Management
+// ==========================
+function buildHamburgerMenu(){
+  const menu=document.getElementById("employeeMenu");
+  menu.innerHTML="";
+
+  teams.forEach(team=>{
+    const teamDiv=document.createElement("div");
+    teamDiv.className="team-block";
+    const title=document.createElement("h4");
+    title.textContent=team.name;
+    teamDiv.appendChild(title);
+
+    const ul=document.createElement("ul");
+    ul.className="employee-list"; ul.dataset.team=team.name;
+
+    team.employees.forEach(emp=>{
+      if(!emp) return;
+      const li=document.createElement("li");
+      li.textContent=emp.name+" ("+emp.site+")";
+      li.draggable=true;
+      li.dataset.empId=emp.id;
+      li.addEventListener("dragstart",e=>{draggedEmpId=e.target.dataset.empId;});
+      li.addEventListener("dragover",e=>e.preventDefault());
+      li.addEventListener("drop",dropEmployee);
+
+      const delBtn=document.createElement("button");
+      delBtn.textContent="❌";
+      delBtn.onclick=()=>deleteEmployee(team.name,emp.id);
+      li.appendChild(delBtn);
+
+      ul.appendChild(li);
+    });
+
+    const addBtn=document.createElement("button");
+    addBtn.textContent="➕ Add Employee";
+    addBtn.onclick=()=>addEmployee(team.name);
+
+    teamDiv.appendChild(ul);
+    teamDiv.appendChild(addBtn);
+
+    const bulkDiv=document.createElement("div");
+    bulkDiv.className="bulk-section";
+    bulkDiv.innerHTML=`
+      <h5>Bulk Apply for ${team.name}</h5>
+      <input type="time" class="bulkSiteIn" placeholder="Site In">
+      <input type="time" class="bulkSiteOut" placeholder="Site Out">
+      <input type="text" class="bulkSiteName" placeholder="Site Name">
+      <button class="applyTeamBtn">Apply to Team</button>
+    `;
+    teamDiv.appendChild(bulkDiv);
+    bulkDiv.querySelector(".applyTeamBtn").addEventListener("click",()=>{
+      const siteIn=bulkDiv.querySelector(".bulkSiteIn").value;
+      const siteOut=bulkDiv.querySelector(".bulkSiteOut").value;
+      const siteName=bulkDiv.querySelector(".bulkSiteName").value;
+      applyTimeToTeam(team.name,siteIn,siteOut,siteName);
+    });
+
+    menu.appendChild(teamDiv);
+    ul.addEventListener("dragover",e=>e.preventDefault());
+    ul.addEventListener("drop",dropEmployee);
+  });
+}
+
+function dropEmployee(e){
+  e.preventDefault();
+  const targetTeamName=e.currentTarget.dataset.team;
+  if(!draggedEmpId||!targetTeamName) return;
+
+  let fromTeam=null, emp=null;
+  teams.forEach(team=>{
+    const found=team.employees.find(x=>x.id==draggedEmpId);
+    if(found){ fromTeam=team; emp=found; }
+  });
+  if(!emp||!fromTeam) return;
+
+  fromTeam.employees=fromTeam.employees.filter(x=>x.id!=draggedEmpId);
+  const targetTeam=teams.find(t=>t.name===targetTeamName);
+  targetTeam.employees.push(emp);
+  emp.team=targetTeamName;
+
+  saveTeams();
+  buildHamburgerMenu();
+  buildEmployeeTable();
+  draggedEmpId=null;
+}
+
+function addEmployee(teamName){
+  const name=prompt("Enter employee name:"); if(!name) return;
+  const site=prompt("Enter site name:")||"";
+  const employee={id:Date.now(),name,site,team:teamName};
+  const team=teams.find(t=>t.name===teamName); team.employees.push(employee);
+  saveTeams(); buildHamburgerMenu(); buildEmployeeTable();
+}
+
+function deleteEmployee(teamName,empId){
+  const team=teams.find(t=>t.name===teamName);
+  team.employees=team.employees.filter(e=>e.id!==empId);
+  if(allData[selectedDate]) delete allData[selectedDate][empId];
+  saveTeams(); saveAllData(); buildHamburgerMenu(); buildEmployeeTable();
+}
+
+// ==========================
+// Employee Table
+// ==========================
+function buildEmployeeTable(){
+  const table=document.getElementById("employeeTable");
+  table.innerHTML=`<tr>
+    <th>Employee Name</th><th>Date</th><th>Site Name</th><th>Site In</th><th>Site Out</th><th>Total Hours</th><th>Overtime Hours</th>
+  </tr>`;
+  if(!allData[selectedDate]) allData[selectedDate]={};
+
+  teams.forEach(team=>team.employees.forEach(emp=>addRow(emp)));
+}
+
+function addRow(emp){
+  const table=document.getElementById("employeeTable");
+  const row=table.insertRow();
+
+  row.insertCell(0).textContent=emp.name;
+  row.insertCell(1).textContent=selectedDate;
+
+  const siteInput=document.createElement("input");
+  siteInput.value=allData[selectedDate][emp.id]?.site||emp.site;
+  siteInput.onchange=e=>{
+    emp.site=e.target.value;
+    if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
+    allData[selectedDate][emp.id].site=e.target.value;
+    saveTeams(); saveAllData(); buildHamburgerMenu();
+  };
+  row.insertCell(2).appendChild(siteInput);
+
+  const inInput=document.createElement("input"); inInput.type="time";
+  inInput.value=allData[selectedDate][emp.id]?.in||"";
+  row.insertCell(3).appendChild(inInput);
+
+  const outInput=document.createElement("input"); outInput.type="time";
+  outInput.value=allData[selectedDate][emp.id]?.out||"";
+  row.insertCell(4).appendChild(outInput);
+
+  const totalCell=row.insertCell(5);
+  const overtimeCell=row.insertCell(6);
+
+  function updateAndSave(){
+    calculateHours(inInput,outInput,totalCell,overtimeCell);
+    if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
+    allData[selectedDate][emp.id].in=inInput.value;
+    allData[selectedDate][emp.id].out=outInput.value;
+    allData[selectedDate][emp.id].site=siteInput.value;
+    saveAllData(); updateSavedDatesList();
+  }
+  inInput.addEventListener("change",updateAndSave);
+  outInput.addEventListener("change",updateAndSave);
+  calculateHours(inInput,outInput,totalCell,overtimeCell);
+
+  const d=new Date(selectedDate);
+  if(d.getDay()===0||publicHolidays.includes(selectedDate)) row.style.backgroundColor="yellow";
+}
+
+function calculateHours(inInput,outInput,totalCell,overtimeCell){
+  const inTime=inInput.value, outTime=outInput.value;
+  if(!inTime||!outTime){
+    totalCell.textContent="❌"; overtimeCell.textContent="❌";
+    totalCell.style.background="red"; overtimeCell.style.background="red";
+    return;
+  }
+  totalCell.style.background=""; overtimeCell.style.background="";
+  const [inH,inM]=inTime.split(":").map(Number), [outH,outM]=outTime.split(":").map(Number);
+  let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24;
+  totalCell.textContent=diff.toFixed(2);
+  const d=new Date(selectedDate);
+  overtimeCell.textContent=(d.getDay()===0||publicHolidays.includes(selectedDate))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
+}
+
+function applyTimeToTeam(teamName,siteIn,siteOut,siteName){
+  const team=teams.find(t=>t.name===teamName); if(!team) return;
+  document.querySelectorAll("#employeeTable tr").forEach((row,i)=>{
+    if(i===0) return;
+    const empName=row.cells[0].textContent;
+    const emp=team.employees.find(e=>e.name===empName); if(!emp) return;
+    const inInput=row.cells[3].querySelector("input");
+    const outInput=row.cells[4].querySelector("input");
+    const siteInput=row.cells[2].querySelector("input");
+    if(siteIn) inInput.value=siteIn;
+    if(siteOut) outInput.value=siteOut;
+    if(siteName) siteInput.value=siteName;
+    calculateHours(inInput,outInput,row.cells[5],row.cells[6]);
+    if(!allData[selectedDate][emp.id]) allData[selectedDate][emp.id]={};
+    allData[selectedDate][emp.id].in=inInput.value;
+    allData[selectedDate][emp.id].out=outInput.value;
+    allData[selectedDate][emp.id].site=siteInput.value;
+  });
+  saveAllData(); updateSavedDatesList();
+}
+
+// ==========================
+// Export CSV
+// ==========================
+function exportCSV(){
+  const fromDate=document.getElementById("exportFrom")?.value||selectedDate;
+  const toDate=document.getElementById("exportTo")?.value||selectedDate;
+  let rows=[["Employee Name","Date","Site Name","Site In","Site Out","Total Hours","Overtime Hours"].join(",")];
+
+  Object.keys(allData).sort().forEach(date=>{
+    if(date<fromDate||date>toDate) return;
+    teams.forEach(team=>{
+      team.employees.forEach(emp=>{
+        const empData=allData[date]?.[emp.id]; if(!empData) return;
+        const siteIn=empData.in||"", siteOut=empData.out||"", siteName=empData.site||emp.site;
+        let totalHours="", overtimeHours="";
+        if(siteIn&&siteOut){
+          const [inH,inM]=siteIn.split(":").map(Number);
+          const [outH,outM]=siteOut.split(":").map(Number);
+          let diff=(outH*60+outM-(inH*60+inM))/60; if(diff<0) diff+=24;
+          totalHours=diff.toFixed(2);
+          const d=new Date(date);
+          overtimeHours=(d.getDay()===0||publicHolidays.includes(date))?diff.toFixed(2):(diff>9?(diff-9).toFixed(2):"0");
+        }
+        rows.push([emp.name,date,siteName,siteIn,siteOut,totalHours,overtimeHours].join(","));
+      });
+    });
+  });
+
+  const blob=new Blob([rows.join("\n")],{type:"text/csv"});
+  const a=document.createElement("a"); a.href=URL.createObjectURL(blob); a.download="employee_hours.csv"; a.click();
+}
+
+// ==========================
+// Saved Dates List
+// ==========================
+function updateSavedDatesList(){
+  const savedDatesList=document.getElementById("savedDatesList");
+  savedDatesList.innerHTML="";
+  Object.keys(allData).sort((a,b)=>new Date(b)-new Date(a)).forEach(date=>{
+    const li=document.createElement("li");
+    li.textContent=date; li.style.cursor="pointer"; li.style.margin="3px 0";
+    li.onclick=()=>{ selectedDate=date; dateInput.value=date; buildEmployeeTable(); };
+    savedDatesList.appendChild(li);
+  });
+}
+
+// ==========================
+// Initialize
+// ==========================
+buildHamburgerMenu(); buildEmployeeTable(); updateSavedDatesList();
+</script>
+
 </body>
 </html>
