--- a/view.html
+++ b/view.html
@@ -3,54 +3,35 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Employee Summary</title>
+<title>Employee Hours Shareable View</title>
 <style>
-body { font-family: Arial, sans-serif; padding: 20px; }
-table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-th, td { border: 1px solid #333; padding: 8px; text-align: left; }
-th { background-color: #f04e23; color: white; }
+body{ font-family:Arial,sans-serif; background:#f0f8ff; padding:20px;}
+table{ width:100%; border-collapse:collapse; }
+th,td{ border:1px solid #333; padding:8px; text-align:center;}
+th{ background:#f7931e; color:white;}
+tr:nth-child(even){ background:#e0e0e0; }
 </style>
 </head>
 <body>
-
-<h2>Employee Summary (All Dates)</h2>
+<h2>Shareable Employee Data</h2>
 <table id="summaryTable">
-  <tr>
-    <th>Date</th>
-    <th>Site Name</th>
-    <th>No. of Team Members</th>
-  </tr>
+  <tr><th>Date</th><th>Site Name</th><th>No. of Team Members</th></tr>
 </table>
 
 <script>
-const sheetURL = "https://script.google.com/macros/s/AKfycbxG_etzGXWEg9uK9TFciAKLp7_eJaWY_P-dO3LtNWNrvzRch7xuJ0xn3Xm7PFTUXlQt/exec"; // Replace with your web app URL
-
-fetch(sheetURL)
-  .then(res => res.json())
-  .then(data => {
-    const table = document.getElementById("summaryTable");
-
-    // Group data by Date and Site
-    const grouped = {};
-    data.forEach(row => {
-      const date = row["Date"];
-      const site = row["Site Name"] || "—";
-      if(!grouped[date]) grouped[date] = {};
-      if(!grouped[date][site]) grouped[date][site] = 0;
-      grouped[date][site]++;
+// Load exported data.json
+fetch('data.json').then(res=>res.json()).then(data=>{
+  const table=document.getElementById("summaryTable");
+  Object.keys(data).sort().forEach(date=>{
+    const teamsCount = Object.values(data[date]||{}).reduce((acc,emp)=>{ if(emp.site) acc[emp.site]=(acc[emp.site]||0)+1; return acc; },{});
+    Object.keys(teamsCount).forEach(site=>{
+      const tr=table.insertRow();
+      tr.insertCell(0).textContent=date;
+      tr.insertCell(1).textContent=site;
+      tr.insertCell(2).textContent=teamsCount[site];
     });
-
-    Object.keys(grouped).sort().forEach(date => {
-      Object.keys(grouped[date]).forEach(site => {
-        const row = table.insertRow();
-        row.insertCell(0).textContent = date;
-        row.insertCell(1).textContent = site;
-        row.insertCell(2).textContent = grouped[date][site];
-      });
-    });
-  })
-  .catch(err => console.error(err));
+  });
+});
 </script>
-
 </body>
 </html>
